--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "manaverse-git"]
 	path = packages/manaverse-git
 	url = ssh://aur@aur.archlinux.org/manaverse-git.git
+[submodule "hunt"]
+	path = packages/hunt
+	url = ssh://aur@aur.archlinux.org/hunt.git
